--- a/RoutinePlan/app/build.gradle
+++ b/RoutinePlan/app/build.gradle
@@ -17,10 +17,31 @@ android {
       proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
     }
   }
+
+  packagingOptions {
+    exclude 'META-INF/LICENSE'
+    exclude 'META-INF/LICENSE-FIREBASE.txt'
+    exclude 'META-INF/NOTICE'
+  }
+
+  dataBinding{
+    enabled true
+  }
 }
 
 dependencies {
   compile fileTree(dir: 'libs', include: ['*.jar'])
   testCompile 'junit:junit:4.12'
   compile 'com.android.support:appcompat-v7:23.3.0'
+  //Timber
+  compile 'com.jakewharton.timber:timber:4.1.0'
+  //RxAndroid
+  compile 'io.reactivex:rxandroid:1.1.0'
+  compile 'io.reactivex:rxjava:1.1.0'
+  //RxBinding
+  compile 'com.jakewharton.rxbinding:rxbinding:0.4.0'
+  //Glide
+  compile 'com.github.bumptech.glide:glide:3.7.0'
+  //FireBase
+  compile 'com.firebase:firebase-client-android:2.5.2+'
 }
