--- a/RoutinePlan/app/build.gradle
+++ b/RoutinePlan/app/build.gradle
@@ -44,4 +44,7 @@ dependencies {
   compile 'com.github.bumptech.glide:glide:3.7.0'
   //FireBase
   compile 'com.firebase:firebase-client-android:2.5.2+'
+  //BottomBar
+  compile 'com.roughike:bottom-bar:1.3.2'
+  compile 'com.ncapdevi:frag-nav:1.0.3'
 }
