--- a/RoutinePlan/app/build.gradle
+++ b/RoutinePlan/app/build.gradle
@@ -24,7 +24,7 @@ android {
     exclude 'META-INF/NOTICE'
   }
 
-  dataBinding{
+  dataBinding {
     enabled true
   }
 }
@@ -38,6 +38,7 @@ dependencies {
   //RxAndroid
   compile 'io.reactivex:rxandroid:1.1.0'
   compile 'io.reactivex:rxjava:1.1.0'
+  compile 'com.minimize.android:rxrecycler-adapter:1.2.2'
   //RxBinding
   compile 'com.jakewharton.rxbinding:rxbinding:0.4.0'
   //Glide
