--- a/RoutinePlan/app/build.gradle
+++ b/RoutinePlan/app/build.gradle
@@ -53,4 +53,6 @@ dependencies {
     transitive = true
   }
   compile 'com.squareup:otto:1.3.8'
+  //Prefs
+  compile 'com.pixplicity.easyprefs:library:1.8.1@aar'
 }
