--- a/RoutinePlan/build.gradle
+++ b/RoutinePlan/build.gradle
@@ -5,7 +5,7 @@ buildscript {
     jcenter()
   }
   dependencies {
-    classpath 'com.android.tools.build:gradle:2.0.0'
+    classpath 'com.android.tools.build:gradle:2.1.0'
 
     // NOTE: Do not place your application dependencies here; they belong
     // in the individual module build.gradle files
@@ -16,6 +16,7 @@ allprojects {
   repositories {
     jcenter()
     maven { url "https://jitpack.io" }
+    maven { url "http://dl.bintray.com/pixplicity/maven" }
   }
 }
 
