Add break intervals Improve data structure

--- a/RoutinePlan/app/build.gradle
+++ b/RoutinePlan/app/build.gradle
@@ -17,7 +17,9 @@ android {
       proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
     }
   }
-
+  dexOptions {
+    preDexLibraries = false
+  }
   packagingOptions {
     exclude 'META-INF/LICENSE'
     exclude 'META-INF/LICENSE-FIREBASE.txt'
