Add a service with timer alongwith some callbacks

--- a/RoutinePlan/app/src/main/AndroidManifest.xml
+++ b/RoutinePlan/app/src/main/AndroidManifest.xml
@@ -24,5 +24,7 @@
     </activity>
 
     <activity android:name=".activity.TasksActivity"/>
+    <activity android:name=".activity.PlayActivity"/>
+    <service android:name=".MyService"/>
   </application>
 </manifest>
