--- a/RoutinePlan/app/build.gradle
+++ b/RoutinePlan/app/build.gradle
@@ -57,6 +57,6 @@ dependencies {
   compile 'com.squareup:otto:1.3.8'
   //Prefs
   compile 'com.pixplicity.easyprefs:library:1.8.1@aar'
-  //Drag sort
-  compile 'com.makeramen:dragsortadapter:+'
+  //Notifications
+  compile 'com.github.halysongoncalves:pugnotification:1.8.1'
 }
