--- a/RoutinePlan/app/build.gradle
+++ b/RoutinePlan/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.neenbedankt.android-apt'
 
 android {
   compileSdkVersion 23
@@ -59,4 +60,7 @@ dependencies {
   compile 'com.pixplicity.easyprefs:library:1.8.1@aar'
   //Notifications
   compile 'com.github.halysongoncalves:pugnotification:1.8.1'
+  //Parceler
+  compile 'org.parceler:parceler-api:1.1.1'
+  apt 'org.parceler:parceler:1.1.1'
 }
