--- a/RoutinePlan/app/build.gradle
+++ b/RoutinePlan/app/build.gradle
@@ -58,9 +58,10 @@ dependencies {
   compile 'com.squareup:otto:1.3.8'
   //Prefs
   compile 'com.pixplicity.easyprefs:library:1.8.1@aar'
-  //Notifications
-  compile 'com.github.halysongoncalves:pugnotification:1.8.1'
   //Parceler
   compile 'org.parceler:parceler-api:1.1.1'
   apt 'org.parceler:parceler:1.1.1'
+  //Google Auth
+  compile 'com.google.android.gms:play-services-auth:8.4.0'
+
 }
