--- a/RoutinePlan/app/build.gradle
+++ b/RoutinePlan/app/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.neenbedankt.android-apt'
+apply plugin: 'com.google.gms.google-services'
 
 android {
   compileSdkVersion 23
@@ -18,8 +19,14 @@ android {
       proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
     }
   }
+
+  buildTypes.each {
+    it.buildConfigField 'String', 'GCM_KEY', GCM_KEY
+  }
+
   dexOptions {
-    preDexLibraries = false
+    maxProcessCount 2
+    javaMaxHeapSize "2g"
   }
   packagingOptions {
     exclude 'META-INF/LICENSE'
@@ -35,7 +42,7 @@ android {
 dependencies {
   compile fileTree(dir: 'libs', include: ['*.jar'])
   testCompile 'junit:junit:4.12'
-  compile 'com.android.support:appcompat-v7:23.3.0'
+  compile 'com.android.support:appcompat-v7:23.4.0'
   //Timber
   compile 'com.jakewharton.timber:timber:4.1.0'
   //RxAndroid
@@ -61,11 +68,16 @@ dependencies {
   //Parceler
   compile 'org.parceler:parceler-api:1.1.1'
   apt 'org.parceler:parceler:1.1.1'
-  //Google Auth
-  compile 'com.google.android.gms:play-services-auth:8.4.0'
+
   //circular imageView
   compile 'de.hdodenhof:circleimageview:2.0.0'
   //Chart Lib
   compile 'com.diogobernardino:williamchart:2.2'
+  //swipe to reveal layout
+  compile 'com.chauthai.swipereveallayout:swipe-reveal-layout:1.2.0'
+  //gcm
+  compile "com.google.android.gms:play-services-gcm:8.3.0"
+  //Google Auth
+  compile 'com.google.android.gms:play-services-auth:8.3.0'
 
 }
