--- a/RoutinePlan/gradle.properties
+++ b/RoutinePlan/gradle.properties
@@ -13,6 +13,11 @@
  org.gradle.jvmargs=-Xmx3048m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
 
  GCM_KEY = "AIzaSyBjbsJLupwnkuAdnCktE1g2TFf8MFVq0TE"
+
+storeFile= RoutinePlan.jks
+storePassword = Nahipata123
+keyAlias=RoutinePlanKey
+keyPassword=Nahipata123
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
