--- a/RoutinePlan/app/src/main/AndroidManifest.xml
+++ b/RoutinePlan/app/src/main/AndroidManifest.xml
@@ -33,13 +33,12 @@
 
     <service android:name=".MyService"/>
 
-    <receiver android:name=".widget.WidgetProvider"
-        android:label="Routines">
+    <receiver android:name=".widget.WidgetProvider" >
       <intent-filter>
-        <action android:name="android.appwidget.action.APPWIDGET_UPDATE"/>
+        <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
       </intent-filter>
       <meta-data android:name="android.appwidget.provider"
-          android:resource="@xml/widgetinfo"/>
+          android:resource="@xml/widgetinfo" />
     </receiver>
 
     <service
@@ -51,6 +50,7 @@
 
     <provider
         android:authorities="com.minimize.android.routineplan"
+        android:exported="true"
         android:name=".data.MyContentProvider"/>
 
     <!-- [START gcm_receiver] -->
